Added login.js correct functionality

--- a/SERVERS/EJERCICIO_03_NODE/public/login.html
+++ b/SERVERS/EJERCICIO_03_NODE/public/login.html
@@ -79,22 +79,32 @@
                     <input type="password" id="login_password" placeholder="Password">
                 </div>
 
+                <!-- Boton para hacer el login -->
                 <div class="col-10 col-sm-3">
                     <!-- Utilizaremos id de login_button para procesar esto en JS -->
                     <button id="login_button" >Submit</button>
 
                 </div>
+
+
+                <!-- Boton para redirigirnos a "cambio de contrasenna" -->
+                <div class="col-10 col-sm-3">
+                <button id="password_change_button" class="float-left submit-button" >Change Password</button>
+
+                </div>
+
+
                 <br><br>
             </div>
         </div>
 
 
         <!-- Archivo para correcta conexion con JS y procesar login -->
-        <script src="js/login.js"></script>
+        <script src="./js/login.js"></script>
         
         <!-- Jquery plugins -->
-        <script src="jquery/jquery.min.js"></script>
-        <script src="jquery-easing/jquery.easing.min.js"></script>
+        <script src="./jquery/jquery.min.js"></script>
+        <script src="./jquery-easing/jquery.easing.min.js"></script>
 
 
 
