files to handle change in password with jquery

--- a/SERVERS/EJERCICIO_03_NODE/public/change_password.html
+++ b/SERVERS/EJERCICIO_03_NODE/public/change_password.html
@@ -29,28 +29,23 @@
     </head>
     <body>
 
-        <!-- Clase "animated" implica que agregamos animacion... "pulse es el tipo de animacion" -->
-        <h1 class="col-12 animated  bounceInLeft">CHANGE PASSWORD OF THE BEST IOT PAGE</h1>
 
+        <!-- Clase "animated" implica que agregamos animacion... "pulse es el tipo de animacion" -->
+        <h1 class="container-fluid animated  bounceInLeft">CAMBIA TU CONTRASEÑA ACTUAL</h1>
+
+        <hr class="no-margin animated bounceInDown agregar-delay-2">
 
         <!-- NOTA: el "container-fluid" es indispensable para que se adapte correctamente al total de espacio -->
         <div class="container-fluid">
-
-            <!-- Creamos division con formato "row" para indicarlo como "fila" -->
-            <div class="row">
-                <!-- SECCION FILA : archivo principal del change password-->
-                <div class ="col-6  animated  flipInX agregar-delay-2">
-                    <h3>Ingrese los siguientes datos para procesar cambio</h3>
-                    <br>
-
-                </div>  
-
-            </div>
-
+            <!-- SECCION FILA : archivo principal de info para cambio de datos de usuario-->
+            <div class ="row animated  flipInX agregar-delay-2">
+                <h3>Ingrese sus nuevos datos de usuario</h3>
+            </div>  
         </div>
-
+        
         <!-- Agregamos linea de separacion entre estas dos secciones -->
-        <hr>
+        <hr class="no-margin animated bounceInDown agregar-delay-2">
+        <br>
 
 
         <!-- SECCION INGRESO DE DATOS POR PARTE DEL USUARIO -->
@@ -78,11 +73,14 @@
                     Confirme contraseña:
                     <input type="password" id="new_password_2"  placeholder="Password">
                 </div>    
+
+                <br><br>
+
                 <div class="col-10 col-sm-3">
                     <!-- Utilizaremos id de change_password_button para procesar esto en JS -->
                     <button id="new_password_button">Cambiar contraseña</button>
-                </div>  
-                <br><br>
+                </div>                  
+
             </div>
         </div>
 
@@ -90,7 +88,11 @@
         <script src="js/change_password.js"></script>
         <!-- Jquery plugins -->
         <script src="jquery/jquery.min.js"></script>
-        <script src="jquery-easing/jquery.easing.min.js"></script>        
+        <script src="jquery-easing/jquery.easing.min.js"></script>
+
+        <!-- Jquery plugins for cool alerts -->
+        <link href="./jquery/jquery.alerts.css" rel="stylesheet" type="text/css" />  
+        <script src="./jquery/jquery.alerts.js"></script>        
 
 
     </body>
