change password changes in style

--- a/SERVERS/EJERCICIO_03_NODE/public/change_password.html
+++ b/SERVERS/EJERCICIO_03_NODE/public/change_password.html
@@ -52,36 +52,45 @@
         <!-- NOTA: el "container-fluid" es indispensable para que se adapte correctamente al total de espacio -->
         <div class="container-fluid animated flipInX agregar-delay-2">
 
-            <!-- dentro de este container, creamos row, para dividir los inputs por igual -->
-            <div class="row">
-
-                <!--Creamos las respectivas separaciones de las columnas para dividir simetricamente espacio  -->
-                <!-- Agregamos ingreso de datos del usuario con ayuda de "inputs" -->
-                <div class="col-10 col-sm-3">
-                    Usuario:
-                    <input type="text" id="actual_usuario"  placeholder="Usuario">
-                </div>
-                <div class="col-10 col-sm-3">
-                    Constraseña actual:
-                    <input type="password" id="actual_password" placeholder="Password">
-                </div>
-                <div class="col-10 col-sm-3">
-                    Nueva contraseña:
-                    <input type="password" id="new_password_1"  placeholder="Password">
-                </div>                
-                <div class="col-10 col-sm-3">
-                    Confirme contraseña:
-                    <input type="password" id="new_password_2"  placeholder="Password">
-                </div>    
-
-                <br><br>
-
-                <div class="col-10 col-sm-3">
-                    <!-- Utilizaremos id de change_password_button para procesar esto en JS -->
-                    <button id="new_password_button">Cambiar contraseña</button>
-                </div>                  
-
+            <!--Creamos las respectivas separaciones de las columnas para dividir simetricamente espacio  -->
+            <!-- Agregamos ingreso de datos del usuario con ayuda de "inputs" -->
+            <div class="col-6 col-sm-3" >
+                Usuario:
+                <input type="text" id="actual_usuario"  placeholder="Usuario" style="position:relative; left:95px;">
             </div>
+
+            <br>
+
+            <div class="col-6 col-sm-3">
+                Constraseña actual:
+                <input type="password" id="actual_password" placeholder="Password" style="position:relative; left:15px;">
+            </div>
+
+            <br>
+
+            <div class="col-6 col-sm-3">
+                Nueva contraseña:
+                <input type="password" id="new_password_1"  placeholder="Password" style="position:relative; left:20px;">
+            </div>          
+            
+            <br>
+
+
+            <div class="col-6 col-sm-3">
+                Confirme contraseña:
+                <input type="password" id="new_password_2"  placeholder="Password">
+            </div>
+
+            <br>
+
+            <div class="col-10 col-sm-3">
+                <!-- Utilizaremos id de volver para procesar esto en JS -->
+                <button id="volver">Volver</button>
+                
+                <!-- Utilizaremos id de change_password_button para procesar esto en JS -->
+                <button id="new_password_button">Cambiar contraseña</button>
+            </div>  
+
         </div>
 
         <!-- Agregamos change_password.js para procesar re-direccionamiento -->
