new <back> button to return to login

--- a/SERVERS/EJERCICIO_03_NODE/public/cuestionario.html
+++ b/SERVERS/EJERCICIO_03_NODE/public/cuestionario.html
@@ -55,6 +55,9 @@
                 <!-- SECCION 1 FILA : incluir imagen e indicamos tamanno de 3 columnas(del total de 12 de Bootstrap) -->
                 <div class ="col-3">
                     <br>
+                    <button  onclick="window.location.replace('/')" class="animated rotateIn agregar-delay-1"  class="float-left submit-button" >VOLVER</button>
+                    <br>
+                    <br>
                     <!-- Agregamos imagenes en carpeta "imgs" para darle mas estilo a la pagina -->
                     <img src="imgs/GIF_RICK_MORTY.gif" class="animated rotateIn agregar-delay-1">
                     <br><br><br>
