agregar boton html login para nuevos usuarios

--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/login.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/login.html
@@ -24,12 +24,12 @@
         <!-- (en este caso la tengo guardada directamente en carpeta "css" en mismo directorio actual) -->
         <link rel="stylesheet" href="css/animate.css">
 
-        <title>LOGIN</title>
+        <title>LOGIN MAIN</title>
     </head>
     <body>
 
         <!-- Clase "animated" implica que agregamos animacion... "pulse es el tipo de animacion" -->
-        <h1 class="container-fluid animated  bounceInLeft">BIENVENIDOS A MI PÁGINA DE IOT</h1>
+        <h1 class="container-fluid animated  bounceInLeft">LOGIN SISTEMA MONITOREO TEMPERATURA Y HUMEDAD</h1>
     
         <hr class="no-margin animated bounceInDown agregar-delay-1">
 
@@ -57,7 +57,7 @@
                     <!--Creamos las respectivas separaciones de las columnas para dividir simetricamente espacio  -->
                     <!-- Agregamos ingreso de datos del usuario con ayuda de "inputs" -->
                     <div class="col-12 ">
-                        Bienvenido a esta gran pagina de IOT, por favor ingrese sus datos.<br><br>
+                        Bienvenido a esta pagina para el monitoreo de las variables de la casa de Santi.<br><br>
                         Usuario:
                         <input class="mover-derecha-input" type="text" id="login_usuario" placeholder="Usuario">
                         <br>
@@ -74,6 +74,8 @@
                         <button id="login_button" >Submit</button>
                         <!-- Boton para redirigirnos a "cambio de contrasenna" -->
                         <button id="password_change_button"  >Change Password</button>
+                        <!-- Boton para registrar a nuevos usuarios y redirigirnos a "new_user" -->
+                        <button id="new_user"  >Registrate</button>
                     </div>
 
                 </div>
