nuevo boton para nuevos usuarios

--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/login.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/login.html
@@ -83,15 +83,9 @@
                 <div class="col-3">
                     <img src="imgs/GIF_API.gif" class="animated rotateIn agregar-delay-1">
 
-                    <br><br>
-
-                    <iframe width="210%" height="80%"
-                        src="https://www.youtube.com/embed/Mbx5IMICS_Y">
-                    </iframe>
-
                 </div>
                 <div class="col-3">
-                    <img src="imgs/GIR_FOURIER_SERIES.gif" class="animated rotateIn agregar-delay-1">
+                    <img src="imgs/GIF_TEMPERATURE.gif" class="animated rotateIn agregar-delay-1">
                 </div>
 
             </div>
