agregar boton <volver> a change password>

--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/change_password.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/change_password.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="css/animate.css">
 
 
-        <title>password_change</title>
+        <title>CAMBIAR CONTRASEÑA</title>
     </head>
     <body>
 
