agregar crear usuario al longin completo

--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/login.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/login.html
@@ -73,7 +73,7 @@
                         <!-- Utilizaremos id de login_button para procesar esto en JS -->
                         <button id="login_button" >Entrar</button>
                         <!-- Boton para registrar a nuevos usuarios y redirigirnos a "new_user" -->
-                        <button id="new_user"  >Registrate</button>
+                        <button id="crear_new_user"  >Registrate</button>
                     </div>
 
                 </div>
