cambios generales cambio contrasenna y eliminar usuario

--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/change_password.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/change_password.html
@@ -54,21 +54,21 @@
 
             <!--Creamos las respectivas separaciones de las columnas para dividir simetricamente espacio  -->
             <!-- Agregamos ingreso de datos del usuario con ayuda de "inputs" -->
-            <div class="col-6 col-sm-3" >
+            <div class="col-12" >
                 Usuario:
                 <input type="text" id="actual_usuario"  placeholder="Usuario" style="position:relative; left:95px;">
             </div>
 
             <br>
 
-            <div class="col-6 col-sm-3">
+            <div class="col-12">
                 Constraseña actual:
                 <input type="password" id="actual_password" placeholder="Password" style="position:relative; left:15px;">
             </div>
 
             <br>
 
-            <div class="col-6 col-sm-3">
+            <div class="col-12">
                 Nueva contraseña:
                 <input type="password" id="new_password_1"  placeholder="Password" style="position:relative; left:20px;">
             </div>          
@@ -76,14 +76,14 @@
             <br>
 
 
-            <div class="col-6 col-sm-3">
+            <div class="col-12">
                 Confirme contraseña:
                 <input type="password" id="new_password_2"  placeholder="Password">
             </div>
 
             <br>
 
-            <div class="col-10 col-sm-3">
+            <div class="col-12">
                 <!-- Utilizaremos id de volver para procesar esto en JS -->
                 <button id="volver">Volver</button>
                 
