--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/eliminar_usuario.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/eliminar_usuario.html
@@ -27,7 +27,10 @@
 
         <title>ELIMINAR USUARIO</title>
     </head>
-    <body>
+
+    <!-- OJO: funcion llamada se llama y se corre 1 vez al correr pagina (al inicio) -->
+    <!-- En este caso nos permite actualizar el nombre del usuario correctamente (ver JavaScript) -->
+    <body onload="funcion_cargar_pagina()">
 
 
         <!-- Clase "animated" implica que agregamos animacion... "pulse es el tipo de animacion" -->
@@ -56,7 +59,7 @@
             <!-- Agregamos ingreso de datos del usuario con ayuda de "inputs" -->
             <div class="col-12" >
                 Usuario:
-                <input type="text" id="usuario_eliminar"  placeholder="Usuario" style="position:relative; left:95px;">
+                <input type="text" id="usuario_eliminar"  placeholder="Usuario" readonly style="position:relative; left:95px;">
             </div>
 
             <br>
