mejorando estilos, login, admin y cambio contrasenna pagina

--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/change_password.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/change_password.html
@@ -27,7 +27,7 @@
 
         <title>CAMBIAR CONTRASEÑA</title>
     </head>
-    <body>
+    <body onload="funcion_cargar_pagina()">
 
 
         <!-- Clase "animated" implica que agregamos animacion... "pulse es el tipo de animacion" -->
@@ -56,7 +56,7 @@
             <!-- Agregamos ingreso de datos del usuario con ayuda de "inputs" -->
             <div class="col-12" >
                 Usuario:
-                <input type="text" id="actual_usuario"  placeholder="Usuario" style="position:relative; left:95px;">
+                <input type="text" id="actual_usuario"  placeholder="Usuario" readonly style="position:relative; left:95px;">
             </div>
 
             <br>
