--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/login.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/login.html
@@ -26,7 +26,10 @@
 
         <title>LOGIN MAIN</title>
     </head>
-    <body>
+
+
+    <!-- Al cargar pagina, llamamos funcion para obligar el cursor a estar en primer input del usuario -->
+    <body  onload="poner_cursor_input_usuario()">
 
         <!-- Clase "animated" implica que agregamos animacion... "pulse es el tipo de animacion" -->
         <h1 class="container-fluid animated  bounceInLeft">LOGIN SISTEMA MONITOREO TEMPERATURA Y HUMEDAD</h1>
