Nuevo admin amestro para correcto cambio de otros usuarios

--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/admin.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/admin.html
@@ -51,8 +51,7 @@
             
             <!-- Utilizaremos id de login_button para procesar esto en JS -->
             <button id="salir_admin" style="position:relative; top:10px;" >Salir</button>
-            <!-- Boton para redirigirnos a "cambio de contrasenna" -->
-            <button id="password_change_button_admin" style="position:relative; top:10px;" >Change Password</button>
+
         </div>
         
         <br>
@@ -93,7 +92,7 @@
                 Dato a cambiar:
                 <select id="opciones_2"  style="position:relative; left:21px;">
                     <option value="nombre">NOMBRE</option>
-                    <option value="id">APELLIDO</option>
+                    <option value="apellido">APELLIDO</option>
                     <option value="usuario">USUARIO</option>
                     <option value="password">PASSWORD</option>
                     <option value="edad">EDAD</option>
