Agregamos tabla datos a main

--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/main.html
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/main.html
@@ -80,7 +80,11 @@
                         <th>ID</th>
                         <th>TEMPERATURA</th>
                         <th>HUMEDAD</th>
-                        <th>FECHA</th>
+                        <th>AÑO</th>
+                        <th>MES</th>
+                        <th>DÍA</th>
+                        <th>HORA</th>
+                        <th>MINUTO</th>
                     </tr>
                 </thead>
                 <!-- NOTA: <tbody> nos sirve para aprovecharnos de JQUERY y llenar tabla (ver "admin.js" para ver proceso) -->
