Nuevas funcionalidades de TEMP-HM, LUZ, PH agregadas

--- a/SERVERS/EJERCICIO_05_PROYECTO_FINAL/public/login.html
+++ b/SERVERS/EJERCICIO_05_PROYECTO_FINAL/public/login.html
@@ -37,9 +37,9 @@
             <div class="row col-12">
         
                 <a href="home.html" class="navegador" >HOME</a >
-                <a href="temp_hum.html" class="navegador">TEMP-HUM</a>
-                <a href="luz.html" class="navegador">LUZ</a>
-                <a href="ph.html" class="navegador">PH</a>
+                <a href="" class="navegador">TEMP-HUM</a>
+                <a href="" class="navegador">LUZ</a>
+                <a href="" class="navegador">PH</a>
                 <a href="contact.html" class="navegador" target="_blank">CONTACT</a>
         
             </div>
