Nuevas funcionalidades estadisticas generales y pagina para esto

--- a/SERVERS/EJERCICIO_05_PROYECTO_FINAL/public/login.html
+++ b/SERVERS/EJERCICIO_05_PROYECTO_FINAL/public/login.html
@@ -40,7 +40,7 @@
                 <a href="" class="navegador">TEMP-HUM</a>
                 <a href="" class="navegador">LUZ</a>
                 <a href="" class="navegador">PH</a>
-                <a href="contact.html" class="navegador" target="_blank">CONTACT</a>
+                <a href="https://github.com/san99tiago" class="navegador" target="_blank">CONTACT</a>
         
             </div>
         
