--- a/SERVERS/EJERCICIO_05_PROYECTO_FINAL/public/change_password.html
+++ b/SERVERS/EJERCICIO_05_PROYECTO_FINAL/public/change_password.html
@@ -40,7 +40,7 @@
                 <a href="temp_hum.html" class="navegador">TEMP-HUM</a>
                 <a href="luz.html" class="navegador">LUZ</a>
                 <a href="ph.html" class="navegador">PH</a>
-                <a href="contact.html" class="navegador" target="_blank">CONTACT</a>
+                <a href="https://github.com/san99tiago" class="navegador" target="_blank">CONTACT</a>
         
             </div>
         
